# Steam-Patchnotes

./: .dockerignore  .env.SAMPLE  .gitignore  .pre-commit-config.yaml  Dockerfile  README.de.md  README.md  docker-compose.yml  pyproject.toml  start.py  tox.ini
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml  codeql-analysis.yml  release.yml  security.yml
docker/: docker-compose.yml  dockerfile  main.py
workshop_changelogs/: config.py  run.py
workshop_changelogs/discord/: webhook.py
workshop_changelogs/i18n/: translations.py
workshop_changelogs/steam/: api_client.py  change_log_parser.py
