[build-system]
requires = ["setuptools ~=65.5"]

[project]
name = "workshop_changelogs"
authors = [
    {name = "Julian Schaefer", email = "julian.schaefer@xmail.dev"},
]
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
]
dynamic = [
    "version",
    "description",
    "dependencies",
]

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "coverage",
    "diff-cover",
    "isort",
    "pre-commit",
    "pytest>=2.7.3",
    "ruff",
]
test = [
    "tox",
]

[project.urls]
Source = "https://github.com/SoulofSorrow/Steam-Patchnotes"

[project.scripts]
workshop_changelogs = "workshop_changelogs.run:root_run"

[tool.bandit]
exclude_dirs = [
    "tests",
]

[tool.black]
line-length = 79
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 79
lines_after_imports = 2
skip = [".tox", "venv"]

[tool.ruff]
exclude = [
    "venv",
    "__init__.py",
]
line-length = 79
select = [
    "B",
    "C",
    "E",
    "F",
    "W",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
description = {file = ["README.md", "README.de.md"]}
# version = {attr = "workshop_changelogs.VERSION"}
